# war1gus

./: .cvsignore  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  HowToRelease  Makefile  README  README.md  appveyor.yml  build.sh  dirent_msvc.h  endian.h  notes.txt  release.rb  scale2x.c  scale2x.h  war1gus.cpp  war1gus.desktop.in  war1gus.nsi  war1gus.rc  war1gus.xpm  war1tool.c  war1tool.cpp  war1tool.dsp  war1tool.dsw  xmi2mid.cpp  xmi2mid.h
.github/workflows/: macos.yml
campaigns/human/: 01_c.sms  02_c.sms  03_c.sms  04_c.sms  05_c.sms  06_c.sms  07_c.sms  08_c.sms  08_prerun.lua  09_c.sms  10_c.sms  11_c.sms  12_c.sms  campaign_titles.lua
campaigns/orc/: 01_c.sms  02_c.sms  03_c.sms  04_c.sms  04_prerun.lua  05_c.sms  06_c.sms  07_c.sms  08_c.sms  08_prerun.lua  09_c.sms  10_c.sms  11_c.sms  12_c.sms  campaign_titles.lua
cmake/modules/: FindLHASA.cmake
contrib/fonts/: LICENSE_3x5_font  LICENSE_Espruino_fonts
debian/: changelog  config  control  copyright  menu  postinst  postrm  rules  templates
mac/: Info.plist  bundle.sh  launchscript.sh
mac/War1gus.app/Contents/MacOS/: war1gus  war1tool
mac/War1gus.app/Contents/Resources/: war1gus.icns
mac/War1gus.app/Contents/Resources/campaigns/human/: 01_c.sms  02_c.sms  05_c.sms  06_c.sms  07_c.sms  08_c.sms  09_c.sms
mac/War1gus.app/Contents/Resources/campaigns/orc/: 01_c.sms  03_c.sms  08_c.sms  10_c.sms
mac/War1gus.app/Contents/Resources/maps/: 4-middle-ground.smp  4-middle-ground.sms  Dungeon_Heat.smp  Dungeon_Heat.sms  EastAndWest(4).sms  GoldRush(4).sms  RushHour(4).smp  RushHour(4).sms
mac/War1gus.app/Contents/Resources/scripts/: ai.lua  anim.lua  balancing.lua  icons.lua  sound.lua  stratagus.lua  ui.lua  units.lua
mac/War1gus.app/Contents/Resources/scripts/ai/: land_attack.lua  passive.lua
mac/War1gus.app/Contents/Resources/scripts/human/: buttons.lua
mac/War1gus.app/Contents/Resources/scripts/menus/: campaign.lua  credits.lua  diplomacy.lua  editor.lua  game.lua  load.lua  objectives.lua  options.lua  replay.lua  results.lua
mac/War1gus.app/Contents/Resources/scripts/tilesets/: forest.lua  swamp.lua
maps/: 1x1_forest.smp  1x1_forest.sms  1x1_river.sms  2x2_swamp.smp  2x2_swamp.sms  2x2_swamp2.smp  2x2_swamp2.sms  4-middle-ground.smp  4-middle-ground.sms  DRAGON(2).smp  DRAGON(2).sms  Dungeon_Heat.sms  EastAndWest(4).smp  EastAndWest(4).sms  GoldRush(4).smp  GoldRush(4).sms  OneWayOut(2).smp  OneWayOut(2).sms  PeaceInOurTime(3).smp  PeaceInOurTime(3).sms  RushHour(4).sms
scripts/: ai.lua  anim.lua  balancing.lua  buildings.lua  buttons.lua  campaigns.lua  cheats.lua  colors.lua  commands.lua  constructions.lua  credits.lua  editor.lua  fonts.lua  fov.lua  guichan.lua  helpers.lua  icons.lua  keystrokes.lua  menus.lua  missiles.lua  ranks.lua  rewrite.py  scripts.lua  sound.lua  spells.lua  stratagus.lua  tilesets.lua  tips.lua  ui.lua  units.lua  upgrade.lua  wc1.lua  widgets.lua
scripts/ai/: air_attack.lua  campaign.lua  land_attack.lua  sea_attack.lua
scripts/human/: buttons.lua  campaign1.lua  constructions.lua  sound.lua  ui.lua  units.lua  upgrade.lua
scripts/lib/: layouts.lua
scripts/menus/: campaign.lua  credits.lua  diplomacy.lua  editor.lua  endscenario.lua  game.lua  help.lua  load.lua  network.lua  objectives.lua  options.lua  replay.lua  results.lua  save.lua
scripts/orc/: buttons.lua  campaign1.lua  constructions.lua  sound.lua  ui.lua  units.lua  upgrade.lua
scripts/tilesets/: dungeon.lua  dungeon_campaign.lua  dungeon_campain.lua  forest.lua  forest_campaign.lua  forest_editor.lua  swamp.lua  swamp_campaign.lua
